examples/avm-res-keyvault-vault/0.11.0/submodules/secret/README.md
<!-- BEGIN_TF_DOCS -->
<!-- Code generated by terraform-docs. DO NOT EDIT. -->
# terraform-azurerm-avm-res-keyvault-vault//secret

Module to deploy key vault secrets in Azure.

## Usage

This sub-module can be called directly to add secrets to an existing key vault:

```terraform
module "keyvault_secret" {
  source  = "Azure/avm-res-keyvault-vault/azurerm//modules/secret"
  version = "0.#.#" # Replace with your desired version

  key_vault_resource_id = azurerm_key_vault.this.id
  name                  = "my-secret"
  value                 = "my-secret-value"

  # Optional
  content_type = "text/plain"
  tags = {
    environment = "prod"
  }
  role_assignments = {
    secrets_user = {
      role_definition_id_or_name = "Key Vault Secrets User"
      principal_id               = data.azurerm_client_config.this.object_id
    }
  }
}
```

<!-- markdownlint-disable MD033 -->
## Requirements

The following requirements are needed by this module:

- <a name="requirement_terraform"></a> [terraform](#requirement\_terraform) (>= 1.11, < 2.0)

- <a name="requirement_azurerm"></a> [azurerm](#requirement\_azurerm) (>= 4.81, < 5.1)

## Resources

The following resources are used by this module:

- [azurerm_key_vault_secret.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/key_vault_secret) (resource)
- [azurerm_role_assignment.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/role_assignment) (resource)

<!-- markdownlint-disable MD013 -->
## Required Inputs

The following input variables are required:

### <a name="input_key_vault_resource_id"></a> [key\_vault\_resource\_id](#input\_key\_vault\_resource\_id)

Description: The ID of the Key Vault where the secret should be created.

Type: `string`

### <a name="input_name"></a> [name](#input\_name)

Description: The name of the secret.

Type: `string`

## Optional Inputs

The following input variables are optional (have default values):

### <a name="input_content_type"></a> [content\_type](#input\_content\_type)

Description: The content type of the secret.

Type: `string`

Default: `null`

### <a name="input_expiration_date"></a> [expiration\_date](#input\_expiration\_date)

Description: The expiration date of the secret as a UTC datetime (Y-m-d'T'H:M:S'Z').

Type: `string`

Default: `null`

### <a name="input_not_before_date"></a> [not\_before\_date](#input\_not\_before\_date)

Description: Secret not usable before as a UTC datetime (Y-m-d'T'H:M:S'Z').

Type: `string`

Default: `null`

### <a name="input_role_assignments"></a> [role\_assignments](#input\_role\_assignments)

Description: A map of role assignments to create on the secret. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.

- `role_definition_id_or_name` - The ID or name of the role definition to assign to the principal.
- `principal_id` - The ID of the principal to assign the role to.
- `description` - The description of the role assignment.
- `skip_service_principal_aad_check` - If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
- `condition` - The condition which will be used to scope the role assignment.
- `condition_version` - The version of the condition syntax. If you are using a condition, valid values are '2.0'.

> Note: only set `skip_service_principal_aad_check` to true if you are assigning a role to a service principal.

Type:

```hcl
map(object({
    role_definition_id_or_name             = string
    principal_id                           = string
    description                            = optional(string, null)
    skip_service_principal_aad_check       = optional(bool, false)
    condition                              = optional(string, null)
    condition_version                      = optional(string, null)
    delegated_managed_identity_resource_id = optional(string, null)
    principal_type                         = optional(string, null)
  }))
```

Default: `{}`

### <a name="input_tags"></a> [tags](#input\_tags)

Description: The tags to assign to the secret.

Type: `map(string)`

Default: `null`

### <a name="input_value"></a> [value](#input\_value)

Description: The value for the secret. Must be set if `value_wo` is not set.

Type: `string`

Default: `null`

### <a name="input_value_wo"></a> [value\_wo](#input\_value\_wo)

Description: The value for the secret writable only. Must be set if `value` is not set.

Type: `string`

Default: `null`

### <a name="input_value_wo_version"></a> [value\_wo\_version](#input\_value\_wo\_version)

Description: The version of the secret writable only. Must be set if `value_wo` is set. Changing this updates the secret value.

Type: `number`

Default: `null`

## Outputs

The following outputs are exported:

### <a name="output_id"></a> [id](#output\_id)

Description: The versioned data plane URI of the secret, in the form
`https://<vault-name>.vault.azure.net/secrets/<secret-name>/<secret-version>`.

Because it pins a specific secret version, consumers will not pick up new versions  
automatically; use `versionless_id` instead if that is required.

### <a name="output_name"></a> [name](#output\_name)

Description: The name of the Key Vault Secret.

### <a name="output_resource_id"></a> [resource\_id](#output\_resource\_id)

Description: The versioned Azure Resource Manager (ARM) resource ID of the secret, in the form
`/subscriptions/<subscription-id>/resourceGroups/<resource-group-name>/providers/Microsoft.KeyVault/vaults/<vault-name>/secrets/<secret-name>/versions/<secret-version>`.

This is an ARM resource ID, not a data plane URI. Use `id` when a service asks for a  
key vault secret URI such as `https://<vault-name>.vault.azure.net/secrets/...`.

### <a name="output_resource_versionless_id"></a> [resource\_versionless\_id](#output\_resource\_versionless\_id)

Description: The versionless Azure Resource Manager (ARM) resource ID of the secret, in the form
`/subscriptions/<subscription-id>/resourceGroups/<resource-group-name>/providers/Microsoft.KeyVault/vaults/<vault-name>/secrets/<secret-name>`.

This is an ARM resource ID, not a data plane URI. Because it does not pin a secret  
version, consumers that support it will pick up new secret versions automatically.

### <a name="output_versionless_id"></a> [versionless\_id](#output\_versionless\_id)

Description: The versionless data plane URI of the secret, in the form
`https://<vault-name>.vault.azure.net/secrets/<secret-name>`.

Because it does not pin a secret version, consumers that support it will pick up new  
secret versions automatically. Use `id` when a specific version is required.

## Modules

No modules.

<!-- markdownlint-disable-next-line MD041 -->
## Data Collection

The software may collect information about you and your use of the software and send it to Microsoft. Microsoft may use this information to provide services and improve our products and services. You may turn off the telemetry as described in the repository. There are also some features in the software that may enable you and Microsoft to collect data from users of your applications. If you use these features, you must comply with applicable law, including providing appropriate notices to users of your applications together with a copy of Microsoft’s privacy statement. Our privacy statement is located at <https://go.microsoft.com/fwlink/?LinkID=824704>. You can learn more about data collection and use in the help documentation and our privacy statement. Your use of the software operates as your consent to these practices.
<!-- END_TF_DOCS -->
